// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Кнопка с переданными пропсами 1`] = `
<button
  className="btn large solid red largeFont fullWidth"
  type="submit"
>
  Click
</button>
`;

exports[`Button Рендер кнопки c дефолтными значениями 1`] = `
<button
  className="btn medium outlined purple"
>
  Click
</button>
`;
